getting rid of the *coming soon* watermark

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <head>
     <title>AJM Portfolio</title>
     <meta name="keywords" content="Andrew Mawhinney, Web Developer, Web Designer">
-    <meta name="description" content="Just a simple dude working with code to bring about a better experience for everyone">
+    <meta name="description" content="Just a simple dude working with code to bring about a better online experience for everyone">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -239,10 +239,10 @@
         <div class="col s12 l5 offset-l2">
           <form>
 
-            <div id="watermark">
+<!--            <div id="watermark">
             <p id="bg-text">Coming <br/>Soon</p>
           	</div>
-
+-->
             <div class="input-field">
               <i class="material-icons prefix">email</i>
               <input type="email" id="email">
